# rustflix

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  auth.dockerfile  cargo.toml  docker-compose.yaml  graphql-core.dockerfile
.github/: codecov.yml
.github/workflows/: check.yml  scheduled.yml  test.yml  tests.yml
auth/: Cargo.toml
auth-database/: Cargo.toml
auth-database/migrations/: 20231012205100_setup.up.sql  20231012205400_setup.down.sql
auth-database/src/: entities.rs  lib.rs
auth-database/src/entities/: credentials.rs  sessions.rs
auth/src/: auth.rs  database.rs  grpc.rs  main.rs  password_helper.rs  server.rs
auth/src/database/: account_repository.rs  traits.rs
auth/src/database/entities/: account.rs
core/: Cargo.toml
core-database/: Cargo.toml
core-database/migrations/: 20231012205100_setup.up.sql  20231012205400_setup.down.sql
core-database/src/: lib.rs
core-database/src/entities/: movies.rs  users.rs
core/src/: service.rs
core/src/dto/: movie.rs  user.rs
database/: Cargo.toml
database/migrations/: 20231012205100_setup.up.sql
database/src/: lib.rs  traits.rs
database/src/entities/: users.rs
graphql/: Cargo.toml
graphql-core/: Cargo.toml
graphql-core/src/: input.rs  main.rs  mutation.rs  output.rs  query.rs  schemas.rs
graphql/src/: main.rs  mutation.rs  query.rs  schemas.rs
grpc-interfaces/: Cargo.toml  build.rs
grpc-interfaces/src/proto/: auth.proto
scripts/: integration_tests.sh
tests/: create_credential.js
