[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12"
tokio = { version = "1.19.2", default-features = false, features = ["macros", "rt-multi-thread"] }
grpc-interfaces = { path = "../grpc-interfaces" }
clap =  { version = "4.4.10", features = ["derive", "env"] }
dotenv = "0.15.0"
serde = "1.0.193"
futures = "0.3.29"
thiserror = "1.0.50"
async-trait = "0.1.74"
mockall = "0.12.0"
regex = "1.10.2"
argon2 = "0.5.2"
rand_core = "0.6.4"
auth-database = { path = "../auth-database" }
serde_json = "1.0.108"
bytes = "1.5.0"
uuid = { version = "1.6.1", features = ["v4"] }
actix-session = {  version = "0.9.0", features = ["redis", "redis-rs-session", "cookie-session"] }
redis = { version = "0.23.0-beta.1" }
actix-web = "4.4.0"
actix-cors = "0.7.0"

[features]
integration = []
