[package]
name = "graphql-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.11"
actix-web = "4.4.0"
clap =  { version = "4.4.10", features = ["derive", "env"] }
database = { git = "https://github.com/Wesley-Arizio/rustflix.git", branch = "main" }
dotenv = "0.15.0"
grpc-interfaces = { path = "../grpc-interfaces" }
core = { path = "../core" }
tonic = "0.10.2"
tokio =  { version = "1.35.0", features = ["sync"]}
chrono = "0.4.31"
actix-session = {  version = "0.9.0", features = ["redis", "redis-rs-session"] }
redis = { version = "0.23.0-beta.1" }
send_wrapper = "0.6.0"
actix-web-lab = "0.20.2"
actix-cors = "0.7.0"
